--- a/e-commerce-master/src/App.css
+++ b/e-commerce-master/src/App.css
@@ -1,3 +1,7 @@
-.App {
-  text-align: center;
+.carousel-img{
+ height: 500px;
+ margin-left: auto;
+ margin-right: auto;
+ margin-top: 1%;
+ max-width: 100%;
 }
