--- a/e-commerce-master/src/App.css
+++ b/e-commerce-master/src/App.css
@@ -1,7 +1,15 @@
 .carousel-img{
- height: 500px;
+ height: 600px;
+ width: 1100px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1%;
- max-width: 100%;
+}
+.navbar {
+  z-index: 1000;
+}
+.dropdown {
+  z-index: 1001;
+  position: absolute; /* or relative, depending on your layout */
+  /* Other styles */
 }
